update code HackerRank

--- a/Code_python.ipynb
+++ b/Code_python.ipynb
@@ -123,8 +123,99 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "id": "8e2bcc9c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def count_substring(string,sub):\n",
+    "    count = 0\n",
+    "    for i in range(len(string)):\n",
+    "        if string[i:i+len(sub)] == sub:\n",
+    "            count += 1\n",
+    "    return count\n",
+    "        \n",
+    "count_substring('ABCDCDCDCACDCBCCDC','CDC')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "ddd15378",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a string:qA2\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n",
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# str.isalnum() ; str.isalpha() ; str.isdigit() ; str.islower() ; str.isupper()\n",
+    "\n",
+    "def string():\n",
+    "    s = input(\"Enter a string:\")\n",
+    "    print(True) if any(letter.isalnum() for letter in s) else print(False)\n",
+    "    print(True) if any(letter.isalpha() for letter in s) else print(False)\n",
+    "    print(True) if any(letter.isdigit() for letter in s) else print(False)\n",
+    "    print(True) if any(letter.islower() for letter in s) else print(False)\n",
+    "    print(True) if any(letter.isupper() for letter in s) else print(False)  \n",
+    "\n",
+    "string()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "id": "5f372204",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ABCD\n",
+      "EFGH\n",
+      "IJKL\n",
+      "IMNO\n",
+      "QRST\n",
+      "UVWX\n",
+      "YZ\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def wrap(string, max_width):\n",
+    "    result = \"\"\n",
+    "    for i in range(0,len(string)-1,max_width):\n",
+    "        result += string[i:i+max_width] + \"\\n\"\n",
+    "    return result\n",
+    "print(wrap('ABCDEFGHIJKLIMNOQRSTUVWXYZ',4))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "e5ddd758",
+   "id": "31b1df75",
    "metadata": {},
    "outputs": [],
    "source": []
