--- a/Code_python.ipynb
+++ b/Code_python.ipynb
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b78b6452",
    "metadata": {},
    "outputs": [
@@ -35,11 +35,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Enter a value for x:3\n",
-      "Enter a value for y:2\n",
-      "Enter a value for z:1\n",
-      "Enter a value for n:4\n",
-      "[[0, 0, 0], [0, 0, 1], [0, 1, 0], [0, 1, 1], [0, 2, 0], [0, 2, 1], [1, 0, 0], [1, 0, 1], [1, 1, 0], [1, 1, 1], [1, 2, 0], [2, 0, 0], [2, 0, 1], [2, 1, 0], [2, 2, 1], [3, 0, 0], [3, 1, 1], [3, 2, 0], [3, 2, 1]]\n"
+      "[[0, 0, 0], [0, 0, 1], [0, 0, 3], [0, 1, 0], [0, 1, 2], [0, 1, 3], [0, 2, 1], [0, 2, 2], [0, 2, 3], [1, 0, 0], [1, 0, 2], [1, 0, 3], [1, 1, 1], [1, 1, 2], [1, 1, 3], [1, 2, 0], [1, 2, 1], [1, 2, 2], [1, 2, 3]]\n"
      ]
     }
    ],
@@ -123,17 +119,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "id": "8e2bcc9c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "4"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -146,7 +142,7 @@
     "            count += 1\n",
     "    return count\n",
     "        \n",
-    "count_substring('ABCDCDCDCACDCBCCDC','CDC')"
+    "count_substring('ABCDCDCDgCACDCBCCDC','CDC')"
    ]
   },
   {
